--- a/KKKonyvtar/KKKonyvtar.csproj
+++ b/KKKonyvtar/KKKonyvtar.csproj
@@ -7,4 +7,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-</Project>
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.2.0" />
+    <PackageReference Include="System.Dat
