--- a/KKKonyvtar/KKKonyvtar.csproj
+++ b/KKKonyvtar/KKKonyvtar.csproj
@@ -9,4 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.2.0" />
-    <PackageReference Include="System.Dat
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+</Project>
